fixed CSS h1 text alignment if long name on small screen

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center; /* needed if long name on mobile */
     gap: 1rem;
 }
 
